--- a/MultiplayerPresence.uproject
+++ b/MultiplayerPresence.uproject
@@ -7,6 +7,10 @@
 		{
 			"Name": "EditorScriptingUtilities",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemEOS",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
