Not actually sure what I changed here.

--- a/MultiplayerPresence.uproject
+++ b/MultiplayerPresence.uproject
@@ -11,6 +11,10 @@
 		{
 			"Name": "OnlineSubsystemEOS",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemOculus",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
