Using KeepSimulationChanges that I exposed

--- a/MultiplayerPresence.uproject
+++ b/MultiplayerPresence.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{084A4963-403F-DFF9-7F14-9CBA3055403E}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
