Voice chat (untested, not proximal)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -275,7 +275,7 @@ bBundleLanguageSplit=True
 bBundleDensitySplit=True
 ExtraApplicationSettings=
 ExtraActivitySettings=
-bAndroidVoiceEnabled=False
+bAndroidVoiceEnabled=True
 +PackageForOculusMobile=Quest
 +PackageForOculusMobile=Quest2
 bRemoveOSIG=False
@@ -346,3 +346,8 @@ NDKAPILevelOverride=
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
 
+[Voice] 
+bEnabled=true
+
+[OnlineSubsystem] 
+bHasVoiceEnabled=true
