--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -29,3 +29,6 @@ bSkipEditorContent=False
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/Engine.GameSession]
+bRequiresPushToTalk=false
