Switched to asset-based node rather than name-based node for loading new level; hopefully fixes Oculus build

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -239,7 +239,7 @@ bUseEOSSessions=True
 bMirrorPresenceToEAS=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.[PROJECT]
+PackageName=com.PushyPixels.[PROJECT]
 StoreVersion=1
 StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
@@ -251,10 +251,10 @@ TargetSDKVersion=25
 InstallLocation=InternalOnly
 bEnableGradle=True
 bEnableLint=False
-bPackageDataInsideApk=False
+bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
 bDisableVerifyOBBOnStartUp=False
-bForceSmallOBBFiles=False
+bForceSmallOBBFiles=True
 bAllowLargeOBBFiles=False
 bAllowPatchOBBFile=False
 bAllowOverflowOBBFiles=False
@@ -351,3 +351,7 @@ bEnabled=true
 
 [OnlineSubsystem] 
 bHasVoiceEnabled=true
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=False
+
