--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/AutoJoinMultiplayer.AutoJoinMultiplayer
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/MultiplayerPresence.MultiplayerPresence_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
